k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: morvo-api
spec:
  selector:
    app: morvo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
